--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"knip": "knip"
 	},
 	"dependencies": {
+		"@reatom/core": "^1000.1.0",
+		"@reatom/react": "^1000.0.0",
 		"@tailwindcss/vite": "^4.1.17",
 		"@tanstack/react-query": "^5.90.12",
 		"axios": "^1.13.2",
@@ -25,8 +27,7 @@
 		"react-router": "^7.10.1",
 		"react-router-dom": "^7.10.1",
 		"tailwind-merge": "^3.4.0",
-		"tailwindcss": "^4.1.17",
-		"zustand": "^5.0.9"
+		"tailwindcss": "^4.1.17"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
