--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"knip": "knip"
 	},
 	"dependencies": {
-		"@reatom/core": "^1000.1.0",
-		"@reatom/react": "^1000.0.0",
+		"@reatom/framework": "^3.4.68",
+		"@reatom/npm-react": "^3.10.6",
 		"@tailwindcss/vite": "^4.1.17",
 		"@tanstack/react-query": "^5.90.12",
 		"axios": "^1.13.2",
