--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"clsx": "^2.1.1",
 		"daisyui": "^5.5.8",
 		"lucide-react": "^0.556.0",
+		"motion": "^12.23.26",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"react-hook-form": "^7.68.0",
