--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"react-router": "^7.10.1",
 		"react-router-dom": "^7.10.1",
 		"tailwind-merge": "^3.4.0",
-		"tailwindcss": "^4.1.17"
+		"tailwindcss": "^4.1.17",
+		"zustand": "^5.0.9"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
