--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@vitejs/plugin-react-swc": "^4.2.2",
 		"knip": "^5.72.0",
 		"typescript": "^5.9.3",
-		"vite": "^7.2.4"
+		"vite": "^7.2.4",
+		"vite-tsconfig-paths": "^6.0.3"
 	}
 }
