--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,7 +29,8 @@
 			"@app/*": ["./app/*"],
 			"@modules/*": ["./modules/*"],
 			"@shared/*": ["./shared/*"],
-			"@pages/*": ["./app/pages/*"]
+			"@pages/*": ["./app/pages/*"],
+			"@assets/*": ["./assets/*"]
 		}
 	},
 	"include": ["src"]
