--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"knip": "knip"
 	},
 	"dependencies": {
+		"chart.js": "^4.4.0",
 		"@tailwindcss/vite": "^4.1.17",
 		"@tanstack/react-query": "^5.90.12",
 		"axios": "^1.13.2",
@@ -21,6 +22,7 @@
 		"lucide-react": "^0.556.0",
 		"motion": "^12.23.26",
 		"react": "^19.2.0",
+		"react-chartjs-2": "^5.3.1",
 		"react-dom": "^19.2.0",
 		"react-hook-form": "^7.68.0",
 		"react-router": "^7.10.1",
